# base-classes

./: BaseClasses.vcxproj  CMakeLists.txt  baseclasses.sln  conanfile.py  streams.h
